# kato-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP_COMPLETE.md  community_cod.md  docker-compose.yml  get_server_ids.py  main.py  pyproject.toml  requirements.txt  setup_reaction_message.py  start-bot.sh  test_connection.py
.github/workflows/: ci.yml  deploy.yml
assets/: config.toml
bot/: __init__.py
bot/cogs/: __init__.py  admin.py  automod.py  coc.py  interest_roles.py  livestream.py  logging.py  moderation.py  onboarding.py  reaction_roles.py  welcome.py
bot/core/: __init__.py  bot.py  config.py  database.py
bot/utils/: __init__.py  automod.py  embeds.py  moderation.py
docs/: QUICKREF.md  README.md
docs/architecture/: 001-database-design.md  002-cog-architecture.md  003-docker-deployment.md
docs/decisions/: 001-why-docker.md  002-why-ruff.md  003-test-isolation-fixture.md
docs/pitfalls/: 001-database-locking.md  002-foreign-key-constraints.md  003-test-pollution.md
migrations/: 001_initial_schema.sql  002_member_profiles.sql  003_interest_roles.sql  apply_migrations.py
notebooks/: testing_db.ipynb
tests/: __init__.py  conftest.py  test_bot_startup.py
tests/integration/: __init__.py  test_automod.py  test_coc.py  test_interest_roles.py  test_logging.py  test_moderation.py  test_onboarding.py  test_reaction_roles.py  test_welcome.py
tests/unit/: __init__.py  test_automod_utils.py  test_config.py  test_database.py  test_embeds.py  test_moderation_utils.py
